<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_margin="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_post_user_id_label"/>

    <EditText
        android:id="@+id/fragment_create_post_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_post_user_id_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_post_post_id_label"/>

    <EditText
        android:id="@+id/fragment_create_post_post_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_post_post_id_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_post_title_label"/>

    <EditText
        android:id="@+id/fragment_create_post_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_post_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_post_body_label"/>

    <EditText
        android:id="@+id/fragment_create_post_body_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_post_body_hint"/>

</LinearLayout>